[CXF-7673] MP Rest Client 1.1 Impl (continued)
Various changes to account for change to use CompletionStage and
to pass the 1.1 TCK:
* Remove changes for InvocationCallback - spec voted against it
* Changed Future to CompletionStage
* Ensure ResponseImpl.getLocation() returns a non-null URI
* Using CompletableFuture in JaxrsClientCallback
* Updates to pom.xml files to use public MP Rest Client API and TCK
* Throw IllegalArgumentException if executorService is null
* Show preference to baseURI config in CDI
* Modify MP Rest Client tests to expect latest version of spec changes